# okey

./: CHANGELOG.md  Cargo.toml  Changes.md  README.md
.github/workflows/: ci.yml  release.yml
examples/: combo_hrm.yaml  default_settings.yaml  key_mapping.yaml  macro_types.yaml  personal_config.yaml  tap_dance_hmr.yaml  tap_dance_hrm.yaml
schema/: okey.json
src/: lib.rs  main.rs
src/cli/: commands.rs  mod.rs
src/cli/commands/: device.rs  mod.rs  service.rs  start.rs
src/cli/utils/: device.rs  mod.rs  systemctl.rs
src/config/: defaults.rs  mod.rs  schema.rs  utils.rs
src/core/: adapter.rs  buffer.rs  combo.rs  event.rs  hook.rs  input.rs  key.rs  layer.rs  manager.rs  map.rs  mapping.rs  mod.rs  proxy.rs  shared.rs  tap_dance.rs
src/fs/: config.rs  device.rs  log.rs  mod.rs  service.rs
src/tests/: buffer.rs  combo.rs  layers.rs  macros.rs  mapping.rs  mod.rs  schema.rs  shift.rs  tap_dance.rs  utils.rs
src/tests/config/: combos.yaml  layers.yaml  macros.yaml  mappings.yaml  okey.yaml  shift.yaml  tap_dances.yaml
