[package]
name = "okey"
version = "0.1.0"
edition = "2021"
authors = ["LIOKA Ranarison Fiderana <luckasranarison@gmail.com>"]
description = "An advanced, easy-to-use key remapper for Linux"
license = "MIT"
repository = "https://github.com/luckasRanarison/okey"
readme = "README.md"
keywords = ["keyboard", "cli"]
categories = ["command-line-interface", "hardware-support"]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
evdev = "0.13.1"
jiff = "0.2.10"
nix = { version = "0.29.0", features = ["user", "process"]}
ringbuffer = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
smallvec = "1.15.0"

[dev-dependencies]
jsonschema = "0.30.0"
serde_json = "1.0.140"
